[metadata]
name = watershed-delineation
version = 1.0.0
author = FYEC
author_email = f.yunusemre@gmail.com
description = A Python package for delineating watersheds from a DEM and pour point.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fyec/watershed-delineation
project_urls =
    Bug Tracker = https://github.com/fyec/watershed-delineation/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: GIS
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.9
install_requires =
    geopandas
    rasterio
    whitebox-tools
    pyproj
    numpy
    shapely

[options.entry_points]
console_scripts =
    delineate_watershed = watershed_delineation.cli:main
